--- a/app/src/main/res/layout/content_quizz.xml
+++ b/app/src/main/res/layout/content_quizz.xml
@@ -8,12 +8,31 @@
     tools:context=".activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+
+    <ImageButton
+        android:id="@+id/btnAddQuizz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/roundcorner"
+        android:elevation="24dp"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rvQuizz"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_add_black_48dp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvQuizz"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.51">
+
+    </android.support.v7.widget.RecyclerView>
+
 </android.support.constraint.ConstraintLayout>
