--- a/app/src/main/res/layout/item_quizz_modif.xml
+++ b/app/src/main/res/layout/item_quizz_modif.xml
@@ -147,7 +147,7 @@
     </android.support.constraint.ConstraintLayout>
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/btnRemoveQuizz"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
