--- a/app/src/main/res/layout/item_quizz_modif.xml
+++ b/app/src/main/res/layout/item_quizz_modif.xml
@@ -71,7 +71,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/tvNbQuestionquizz"
+            android:id="@+id/tvNbQuestionStat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -94,7 +94,7 @@
             android:text="@string/CvQuizzQuestion"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/tvNbQuestionquizz"
+            app:layout_constraintStart_toEndOf="@+id/tvNbQuestionStat"
             app:layout_constraintTop_toBottomOf="@+id/tvTitreQuizz" />
 
         <Button
@@ -127,7 +127,7 @@
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvNbQuestionquizz" />
+            app:layout_constraintTop_toBottomOf="@+id/tvNbQuestionStat" />
 
         <RatingBar
             android:id="@+id/ratingBar"
