--- a/app/src/main/res/layout/infostat__activity.xml
+++ b/app/src/main/res/layout/infostat__activity.xml
@@ -6,7 +6,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".infostat_Activity" >
+    tools:context=".activity.InfostatActivity" >
 
     <Button
         android:id="@+id/Button_Info"
