--- a/app/src/main/res/layout/infostat__activity.xml
+++ b/app/src/main/res/layout/infostat__activity.xml
@@ -12,8 +12,12 @@
         android:id="@+id/Button_Info"
         android:layout_width="0dp"
         android:layout_height="64dp"
+        android:background="@drawable/side_nav_bar"
+        android:fontFamily="@font/roboto_medium"
         android:onClick="GetBtnInfo"
         android:text="Informations"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,9 +27,13 @@
         android:id="@+id/Button_Stat"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/side_nav_bar"
+        android:fontFamily="@font/roboto_medium"
         android:onClick="GetBtnStat"
         android:paddingLeft="0dp"
         android:text="Statistiques"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/Button_Info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -49,8 +57,12 @@
         android:id="@+id/button_Play"
         android:layout_width="0dp"
         android:layout_height="64dp"
+        android:background="@drawable/side_nav_bar"
+        android:fontFamily="@font/roboto_medium"
         android:onClick="GetBtnPlay"
         android:text="Jouer"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.916"
